# package

./: justfile  main.py  pyproject.toml  pyprojectA.toml
src/: build.py  compare.py  constants.py  env_version.py  main.py  module_caller.py  projects.py  root.py  text.py  xxx.py
src/forms/: frm_build.py  frm_compare.py  frm_config.py  frm_main.py  frm_project_edit.py  frm_project_versions.py
src/package/: __init__.py  build.py  compare.py  config.py  constants.py  env_version.py  main.py  main_menu.py  module_caller.py  modules.py  projects.py  projects_io.py  root.py  text.py
src/package/forms/: frm_build.py  frm_compare.py  frm_config.py  frm_main.py  frm_project_edit.py  frm_project_versions.py  frm_search.py
tests/: test_app.py  test_projects.py  test_version.py
