[project]
name = "package"
version = "0.1.0"
description = "Compare two versions of the same package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "icecream>=2.1.4",
    "markdown>=3.8",
    "psi-toml>=0.0.5",
    "psiconfig>=0.0.13",
    "psiutils>=0.1.54",
    "python-dateutil>=2.9.0.post0",
    "tkinterweb>=4.3.1",
]
