[project]
name = "package"
version = "0.0.0"
description = "Compare package with install versions in virtual environments"
authors = [{name = "Jeff", "email" = "<jeffwatkins2000@gmail.com>"}]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "appdirs>=1.4.4",
    "icecream>=2.1.4",
    "markdown>=3.8",
    "psi-toml>=0.0.5",
    "psiconfig>=0.0.13",
    "psiutils>=0.1.54",
    "python-dateutil>=2.9.0.post0",
    "tkinterweb>=4.3.1",
]

[dependency-groups]
dev = ['pytest']

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'
